--- a/fylo-dark-theme-landing-page-master/style.css
+++ b/fylo-dark-theme-landing-page-master/style.css
@@ -128,3 +128,25 @@ body{
     left: -38px;
     z-index: -1;
 }
+.grid-3{
+    display: grid;
+    width: 800px;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 30px;
+    text-align: center;
+    background-color: hsl(217, 28%, 15%);
+    z-index: 1;
+    position: relative;
+    top: 80px;
+
+}
+.footer{
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr 1fr;
+    background-color: hsl(216, 53%, 9%);
+    padding-top: 200px;
+
+}
