--- a/fylo-dark-theme-landing-page-master/style.css
+++ b/fylo-dark-theme-landing-page-master/style.css
@@ -26,6 +26,12 @@
 body{
     background-color: hsl(218, 28%, 13%);
     color: hsl(0, 0%, 100%);
+    font-size: 14px;
+    font-family: Open Sans;
+    font-weight: 400;
+}
+h1,h2,h3{
+    font-weight: 700;
 }
 .top-div{
     background-color: hsl(217, 28%, 15%);
@@ -103,6 +109,13 @@ body{
     gap: 10px;
     width: 30%;
 }
+.fly-link{
+    display: flex;
+    color: skyblue;
+    gap: 10px;
+    cursor: pointer;
+    width: fit-content;
+}
 .grid-2{
     display: grid;
     grid-template-columns: 350px 350px 350px;
@@ -111,21 +124,28 @@ body{
     margin-bottom: 150px;
 }
 .card{
+    display: flex;
+    flex-direction: column;
+    height: fit-content;
+    gap: 25px;
     background-color: hsl(219, 30%, 18%);
-    padding: 0 30px;
+    padding: 50px 30px 30px 30px;
+    border-radius: 5px;
 }
 .author>img{
     border-radius: 50%;
     width: 30px;
+    height: 30px;
 }
 .author{
     display: flex;
-
+    align-items: center;
+    gap: 10px;
 }
 .quote{
     position: relative;
-    top: -135px;
-    left: -38px;
+    left: 190px;
+    top: 14px;
     z-index: -1;
 }
 .grid-3{
@@ -141,12 +161,58 @@ body{
     z-index: 1;
     position: relative;
     top: 80px;
-
+    border-radius: 10px;
+}
+.email-bar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 35px;
+}
+.email{
+    width: 300px;
+    padding: 15px 50px;
+    border-radius: 25px;
+    border-style: none;
+}
+.btn-2{
+    width: 200px;
+    padding: 15px 30px;
+    border-radius: 25px;
+    border-style: none;
+    background-color: skyblue;
+    color: white;
+    cursor: pointer;
 }
 .footer{
     display: grid;
     grid-template-columns: 2fr 1fr 1fr 1fr;
+    gap: 40px;
     background-color: hsl(216, 53%, 9%);
-    padding-top: 200px;
-
+    padding-top: 150px;
+    padding-bottom: 80px;
+}
+.address{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    margin-left: 80px;
+}
+.icon{
+    display: flex;
+    gap: 20px;
+}
+.contact{
+    display: flex;
+    flex-direction: column;
+   gap: 20px;
+   padding-top: 86px;
+}
+.details{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding-top: 86px;
+    flex-wrap: wrap;
+    height: 220px;
 }
